fixing overflow

--- a/src/app/@ansyn/ansyn/modules/menu-items/cases/components/cases-table/cases-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/cases/components/cases-table/cases-table.component.less
@@ -33,7 +33,7 @@ div.cases-table {
 
 	div.cases-table-body {
 		display: block;
-		overflow: auto;
+		overflow-y: auto;
 		max-height: 80vh;
 
 		div.cases-table-body-row:hover + div.cases-table-body-row hr {
