--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
@@ -93,7 +93,7 @@
 		div.results-table-body {
 			direction: rtl;
 			display: block;
-			overflow: auto;
+			overflow-y: auto;
 			max-height: 80vh;
 
 			div.results-table-body-row-data:hover {
